fix: wrong recurrence day selected when updating an event by D&D - EXO-63851